--- a/ProjectDiamondShop/Views/Home/Contact.cshtml
+++ b/ProjectDiamondShop/Views/Home/Contact.cshtml
@@ -56,31 +56,31 @@
         }
 
         .dropdown-menu {
-            width: 400px;
+            max-width: 10px;
         }
 
             .dropdown-menu li a {
                 font-size: 12px;
             }
 
-            .dropdown-menu h3,
-            .dropdown-menu .col-md-3,
-            .dropdown-menu .divider {
-                margin-bottom: 2px;
-            }
-
             .dropdown-menu h3 {
                 font-size: 14px;
+                margin-bottom: 2px;
             }
 
             .dropdown-menu .col-md-3 {
                 border-right: 1px solid #ddd;
-                padding-right: 20px;
+                padding-right: 10px;
             }
 
                 .dropdown-menu .col-md-3:last-child {
                     border-right: none;
                 }
+
+            .dropdown-menu .divider {
+                margin-top: 2px;
+                margin-bottom: 2px;
+            }
 
         .navbar-brand {
             display: flex;
@@ -91,7 +91,16 @@
             .navbar-brand span:first-child {
                 margin-right: 10px;
             }
+
+        .navbar-nav > li > .dropdown-menu {
+            display: none;
+        }
+
+        .navbar-nav > li:hover > .dropdown-menu {
+            display: block;
+        }
     </style>
+
 </head>
 <body>
     <form id="form1" runat="server">
@@ -122,9 +131,25 @@
                             <li><a href="@Url.Action("Index", "Diamonds")">Shop</a></li>
                             @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
                             {
-                                <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
-                                <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
-                                <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
+
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <span class="glyphicon glyphicon-shopping-cart"></span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@Url.Action("Index", "Cart")">View Cart</a></li>
+                                        <li><a href="@Url.Action("ViewOrders", "Home")">View Orders</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <span class="glyphicon glyphicon-user"></span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="@Url.Action("EditProfile", "ViewProfile")">View Profile</a></li>
+                                        <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
+                                    </ul>
+                                </li>
                             }
                             else
                             {
